--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieCashGiftAlertVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieCashGiftAlertVC.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYNewbieCashGiftAlertVC">
             <connections>
+                <outlet property="unreadMsgLabel" destination="xzQ-vS-siY" id="SqL-sJ-dVf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -75,7 +76,7 @@
                                         <constraint firstAttribute="height" constant="48" id="Tz9-Q0-2Af"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
-                                    <state key="normal" title="去投注"/>
+                                    <state key="normal" title="去領取"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="color" keyPath="startColor">
                                             <color key="value" red="1" green="0.46666666670000001" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -87,6 +88,9 @@
                                             <real key="value" value="24"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="receivedClicked:" destination="-1" eventType="touchUpInside" id="93Y-9G-5aA"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
