--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieAlertVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieAlertVC.xib
@@ -9,11 +9,13 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYNewbieTwoButtonVC">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYNewbieAlertVC">
             <connections>
-                <outlet property="leftButton" destination="rPl-4f-k0z" id="plE-E7-Ctl"/>
-                <outlet property="rightButton" destination="wD5-3L-J6K" id="hp4-g9-xe2"/>
+                <outlet property="betingsButton" destination="wD5-3L-J6K" id="2YQ-Pu-AWu"/>
+                <outlet property="contentLabel" destination="ogC-nl-JiW" id="71U-dt-2U3"/>
+                <outlet property="depositButton" destination="rPl-4f-k0z" id="vcR-T7-96E"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="ximaButton" destination="pM2-hz-18x" id="KxB-pB-31c"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -90,7 +92,7 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
-                                        <action selector="leftButtonClicked:" destination="-1" eventType="touchUpInside" id="G2l-qq-JEr"/>
+                                        <action selector="depositClicked:" destination="-1" eventType="touchUpInside" id="qmY-VI-nQg"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wD5-3L-J6K" customClass="BYGradientButton">
@@ -113,7 +115,30 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
-                                        <action selector="rightButtonClicked:" destination="-1" eventType="touchUpInside" id="WPV-OA-438"/>
+                                        <action selector="betingsClicked:" destination="-1" eventType="touchUpInside" id="eSk-73-FzT"/>
+                                    </connections>
+                                </button>
+                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pM2-hz-18x" customClass="BYGradientButton">
+                                    <rect key="frame" x="97" y="144.5" width="190" height="48"/>
+                                    <color key="backgroundColor" red="0.74117647060000003" green="0.0" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="48" id="pfz-Pt-vS5"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
+                                    <state key="normal" title="去洗码"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                            <color key="value" red="1" green="0.46666666670000001" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                            <color key="value" red="0.74117647060000003" green="0.0" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="24"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="ximaClicked:" destination="-1" eventType="touchUpInside" id="fNv-WU-dZh"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -125,9 +150,12 @@
                                 <constraint firstItem="wD5-3L-J6K" firstAttribute="leading" secondItem="rPl-4f-k0z" secondAttribute="trailing" constant="10" id="B3c-3c-2Ee"/>
                                 <constraint firstItem="c5k-UA-aMM" firstAttribute="centerX" secondItem="QiD-6z-aYk" secondAttribute="centerX" id="DrZ-PL-yuL"/>
                                 <constraint firstItem="rPl-4f-k0z" firstAttribute="width" secondItem="wD5-3L-J6K" secondAttribute="width" id="MZB-YU-Vhg"/>
+                                <constraint firstAttribute="bottom" secondItem="pM2-hz-18x" secondAttribute="bottom" constant="24.5" id="PFe-Fm-qte"/>
                                 <constraint firstAttribute="bottom" secondItem="rPl-4f-k0z" secondAttribute="bottom" constant="24" id="RGV-4n-wnp"/>
+                                <constraint firstAttribute="trailing" secondItem="pM2-hz-18x" secondAttribute="trailing" constant="97" id="T0O-b9-6lS"/>
                                 <constraint firstAttribute="trailing" secondItem="wD5-3L-J6K" secondAttribute="trailing" constant="17.5" id="TiV-NA-6XI"/>
                                 <constraint firstAttribute="height" constant="217" id="VVq-mx-11l"/>
+                                <constraint firstItem="pM2-hz-18x" firstAttribute="leading" secondItem="QiD-6z-aYk" secondAttribute="leading" constant="97" id="fAi-Sm-sWd"/>
                                 <constraint firstItem="ogC-nl-JiW" firstAttribute="top" secondItem="c5k-UA-aMM" secondAttribute="bottom" constant="6.2000000000000002" id="fQ0-Aj-UVv"/>
                                 <constraint firstItem="ogC-nl-JiW" firstAttribute="centerX" secondItem="c5k-UA-aMM" secondAttribute="centerX" id="yLV-fn-cb0"/>
                             </constraints>
