--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieMissionVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieMissionVC.xib
@@ -11,12 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BYNewbieMissionVC">
             <connections>
+                <outlet property="cashGiftButton" destination="QnC-oR-hQW" id="Lkf-A3-vbx"/>
+                <outlet property="completeButton" destination="LuN-KM-PxX" id="X2f-MS-KOl"/>
                 <outlet property="countdownLabel" destination="yDE-PD-auG" id="yn9-83-XrZ"/>
+                <outlet property="firstXimaButton" destination="k1p-Zs-yn7" id="Tjz-sk-hTQ"/>
+                <outlet property="gameExperienceButton" destination="0WV-EF-YEz" id="6RC-oa-NuA"/>
                 <outlet property="maxiumCashGiftLabel" destination="h9K-XQ-jfR" id="N1f-1b-kBj"/>
+                <outlet property="signinButton" destination="fPQ-ey-PPj" id="Xw9-2S-DRp"/>
                 <outlet property="signinLabel" destination="Gd3-UM-hfB" id="Ypt-np-evz"/>
                 <outlet property="totalBettingsLabel" destination="p8o-3F-cWv" id="Hnw-aj-opx"/>
                 <outlet property="totalRechargeLabel" destination="oJz-El-Xns" id="OYJ-ud-fca"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="vipshareButton" destination="vla-HH-wuB" id="fvo-Pf-O5H"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -210,11 +216,15 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URO-JV-o5w">
                                                             <rect key="frame" x="0.0" y="0.0" width="61" height="124"/>
                                                             <subviews>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bdsj" translatesAutoresizingMaskIntoConstraints="NO" id="Eox-8d-UiT">
+                                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bdsj" translatesAutoresizingMaskIntoConstraints="NO" id="Eox-8d-UiT">
                                                                     <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                                    <gestureRecognizers/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="Eox-8d-UiT" secondAttribute="height" multiplier="1:1" id="nRe-OC-LUW"/>
                                                                     </constraints>
+                                                                    <connections>
+                                                                        <outletCollection property="gestureRecognizers" destination="ngn-LB-YJK" appends="YES" id="YO6-bH-CPy"/>
+                                                                    </connections>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="绑定手机 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQj-Fj-ThI">
                                                                     <rect key="frame" x="4.5" y="66" width="52" height="17"/>
@@ -793,6 +803,9 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QnC-oR-hQW" customClass="BYGradientButton">
                                             <rect key="frame" x="72.5" y="237" width="200" height="48"/>
                                             <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                            <accessibility key="accessibilityConfiguration">
+                                                <bool key="isElement" value="NO"/>
+                                            </accessibility>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="48" id="TTm-v8-nhH"/>
                                             </constraints>
@@ -929,6 +942,9 @@
                                                     <real key="value" value="24"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="gemeExperienceClicked:" destination="-1" eventType="touchUpInside" id="5Hb-n6-HJO"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vla-HH-wuB" customClass="BYGradientButton">
                                             <rect key="frame" x="206" y="349" width="117" height="44"/>
@@ -951,6 +967,9 @@
                                                     <real key="value" value="22"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="vipShareClicked:" destination="-1" eventType="touchUpInside" id="JqR-Pd-0ad"/>
+                                            </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="  1.有效完成一次洗码    " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="p2a-wW-X1R" customClass="BYBorderLabel">
                                             <rect key="frame" x="22" y="295" width="174" height="44"/>
@@ -995,6 +1014,9 @@
                                                     <real key="value" value="22"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="firstXimaClicked:" destination="-1" eventType="touchUpInside" id="KQS-Ta-p31"/>
+                                            </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="  2.成功加入一次VIP私享会    " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="acT-jI-7kc" customClass="BYBorderLabel">
                                             <rect key="frame" x="22" y="349" width="174" height="44"/>
@@ -1109,6 +1131,11 @@
             </constraints>
             <point key="canvasLocation" x="133.59999999999999" y="150.67466266866569"/>
         </view>
+        <tapGestureRecognizer id="ngn-LB-YJK">
+            <connections>
+                <action selector="bindingPhoneClicked:" destination="-1" id="4PH-1Q-ecC"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="banner" width="375" height="254"/>
