feat: 余额宝交易记录完成

--- a/HYNewNest/Features(主代码)/YuEBaoComponent/Controller/BYYuEBaoTransferVC.xib
+++ b/HYNewNest/Features(主代码)/YuEBaoComponent/Controller/BYYuEBaoTransferVC.xib
@@ -14,6 +14,7 @@
                 <outlet property="btnAllTrans" destination="fym-ae-PkZ" id="i3G-zK-i6x"/>
                 <outlet property="btnComfirm" destination="kaB-Ru-aVN" id="iEq-Ji-hke"/>
                 <outlet property="lbCurrency" destination="EUC-K7-a0c" id="vaW-rW-rHV"/>
+                <outlet property="lbThird" destination="f1a-dR-Pjr" id="NEh-7k-c8V"/>
                 <outlet property="lbTips" destination="dhW-Lt-Weh" id="0od-aa-5NG"/>
                 <outlet property="lbTransableAmout" destination="PXu-u4-7M5" id="6lE-3Q-82J"/>
                 <outlet property="lbWrongMsg" destination="n1a-7N-D4n" id="oFL-hM-Kv6"/>
@@ -27,7 +28,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wl9-Aw-D1i">
-                    <rect key="frame" x="15" y="59" width="384" height="250"/>
+                    <rect key="frame" x="15" y="59" width="384" height="270"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-u4-7M5">
                             <rect key="frame" x="155" y="42" width="74" height="33"/>
@@ -85,7 +86,7 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="放的越久，利息越多" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhW-Lt-Weh">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="放的越久，利息越多" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhW-Lt-Weh">
                             <rect key="frame" x="22.5" y="212.5" width="339" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="0.42745098039215684" green="0.46666666666666667" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -106,7 +107,7 @@
                         <constraint firstItem="f1a-dR-Pjr" firstAttribute="centerX" secondItem="wl9-Aw-D1i" secondAttribute="centerX" id="Brg-nB-nPP"/>
                         <constraint firstItem="PXu-u4-7M5" firstAttribute="top" secondItem="wl9-Aw-D1i" secondAttribute="top" constant="42" id="C3b-hU-r5G"/>
                         <constraint firstItem="SFg-i5-fK8" firstAttribute="top" secondItem="f1a-dR-Pjr" secondAttribute="bottom" constant="43" id="Gtk-gS-jbM"/>
-                        <constraint firstAttribute="height" constant="250" id="Kml-gk-N9c"/>
+                        <constraint firstAttribute="height" constant="270" id="Kml-gk-N9c"/>
                         <constraint firstItem="n1a-7N-D4n" firstAttribute="leading" secondItem="SFg-i5-fK8" secondAttribute="leading" id="MYR-X6-qFh"/>
                         <constraint firstItem="dhW-Lt-Weh" firstAttribute="leading" secondItem="SFg-i5-fK8" secondAttribute="leading" id="RyX-hI-9mw"/>
                         <constraint firstItem="f1a-dR-Pjr" firstAttribute="top" secondItem="EUC-K7-a0c" secondAttribute="bottom" constant="7" id="VF3-ht-uYT"/>
